# cudaFractal

./: CMakeLists.txt  kernel.cu  main.cpp
